Just in case commit

--- a/styles.css
+++ b/styles.css
@@ -6,36 +6,38 @@
   --grey: #c1c4cd;
 }
 
-
-
 #bcGreen {
   background-color: var(--green);
 }
 #bcLightBrown{
   background-color: var(--light-brown);
+ opacity: 97; 
 }
 #bcKhaki{
   background-color: var(--khaki);
 }
-
 #darkBrownBoarder {
   border-color: var(--dark-brown);
 }
-
 
 html {
   font-family: 'Andada Pro', serif;
   font-family: 'Rye', cursive;
 }
 
-h1, h4, p {
+h1, h3, h4 {
   font-family: 'Andada Pro', serif;
   font-family: 'Rye', cursive;
   opacity: 100;
 }
 
-h1 {
+h1, p {
   font-weight: bold;
+}
+
+
+img {
+  opacity: 100;
 }
 
 
@@ -44,7 +46,7 @@ h1 {
 #containerFluid {
   background-color: var(--light-brown);
   width: 97%;
-  opacity: 0.5;
+  opacity: 0.99;
 }
 #containerFluidSpecial {
   width: 100%;
@@ -56,35 +58,6 @@ h1 {
 }
 
 
-/* ? https://www.codeply.com/p/0CWffz76Q9 */
-@media (max-width: 767px) {
-  .carousel-inner .carousel-item > div {
-      display: none;
-  }
-  .carousel-inner .carousel-item > div:first-child {
-      display: block;
-  }
-}
-.carousel-inner .carousel-item.active,
-.carousel-inner .carousel-item-next,
-.carousel-inner .carousel-item-prev {
-  display: flex;
-}
-/* medium and up screens */
-@media (min-width: 768px) {
-  .carousel-inner .carousel-item-end.active,
-  .carousel-inner .carousel-item-next {
-    transform: translateX(25%);
-  }
-  .carousel-inner .carousel-item-start.active, 
-  .carousel-inner .carousel-item-prev {
-    transform: translateX(-25%);
-  }
-}
-.carousel-inner .carousel-item-end,
-.carousel-inner .carousel-item-start { 
-transform: translateX(0);
-}
 
 
 
