--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,52 @@
 :root {                             /**  Call with background-color: var(--first-color);  */
   --dark-brown: #5c4121;
-  --light-brown: #aa7e38;
-  --khaki: darkkhaki;
-  --green: #708a29;
-  --grey: #c1c4cd;
+  --light-brown: #c19a6B;
+  --khaki: #aa7e38;
+  --blue: #3e6594;
 }
 
-#bcGreen {
-  background-color: var(--green);
-}
 #bcLightBrown{
   background-color: var(--light-brown);
- opacity: 97; 
 }
 #bcKhaki{
   background-color: var(--khaki);
 }
-#darkBrownBoarder {
-  border-color: var(--dark-brown);
-}
+
 
 html {
   font-family: 'Andada Pro', serif;
   font-family: 'Rye', cursive;
 }
-
 h1, h3, h4 {
   font-family: 'Andada Pro', serif;
   font-family: 'Rye', cursive;
-  opacity: 100;
 }
-
-h1, p {
+#h1{
+  font-size: 5rem;
+}
+p {
   font-weight: bold;
 }
-
-
 img {
   opacity: 100;
 }
 
 
-
-
 #containerFluid {
   background-color: var(--light-brown);
-  width: 97%;
-  opacity: 0.99;
+  width: 95%;
+  opacity: 0.87;
+  
 }
 #containerFluidSpecial {
   width: 100%;
+  opacity: 0.87;
+  background-color: var(--khaki);
 }
 
-
-#greenBorder {
-  border: solid var(--green);
+#carouselImage {
+  opacity: 1;
 }
-
 
 
 
@@ -89,10 +79,7 @@ body {
 
 
 /* * Modal  ******************************/
-#myModal2 {
-  color: var(--dark-brown);
-  border: solid var(--green);
-}
+
 #modalHeader {
   text-align: center;
   border-bottom: 0;
