--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@
   --blue: #3e6594;
 }
 
+body {
+  background-image: url("/img/twofaces.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Andada Pro', serif;
   font-family: 'Rye', cursive;
@@ -18,12 +24,6 @@ p {
 #containerDark {
   opacity: 0.90;
   width: 98%;
-  background-color: var(--dark-brown);
-}
-
-#containerDarkWide {
-  opacity: 0.90;
-  width: 100%;
   background-color: var(--dark-brown);
 }
 
