background image fix

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,6 @@
   --blue: #3e6594;
 }
 
-#body {
-  background-image: url("/img/twofaces.jpg") !important;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Andada Pro', serif;
   font-family: 'Rye', cursive;
@@ -19,6 +13,13 @@ p {
   font-weight: bold;
   font-family: 'Andada Pro', serif;
   font-size: 0.9rem;
+}
+
+.background-image {                           /*! Doesn't work, inline CSS is used instead.. */
+  background-image: url('img/twofaces.jpg'); 
+  height: 100vh; 
+  background-repeat: no-repeat; 
+  background-attachment: fixed;
 }
 
 #containerDark {
@@ -40,3 +41,5 @@ p {
 #textSmall {
   font-size: small;
 }
+
+
